@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.7.4
 ------------------------
+ o bug fixed of rm.singleton.newick, remove singleton parent instead of singleton <2016-12-01, Thu>
  o reorder phylo to postorder before ladderrize <2016-11-28, Mon>
  o allow yscale to use data stored in phylo4d object <2016-11-24, Thu>
    + https://github.com/GuangchuangYu/ggtree/issues/98
